Upgrade Java version from 8 to 21